# lithophane-generator

./: .gitignore  Cargo.toml  TODO.md
src/: lib.rs  lithophane.rs  main.rs
src/lithophane/: rectangle.rs
