[package]
name = "lithophane-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
image = {version = "0.24.5", default-features = false, features = ["jpeg", "png", "gif"] }
pk_stl = "0.3.0"
meval = "0.2.0"
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]
